# clawsafe

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
clawsafe/: __init__.py  audit.py  cli.py  cloud.py  config.py  daemon.py  notify.py  onboard.py  openclaw.py  proxy.py  rules.py
clawsafe/rules/: __init__.py  default.py  engine.py  loader.py  models.py
tests/: test_engine.py  test_proxy.py  test_rules.py
