[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawsafe"
version = "0.1.0"
description = "Reversibility firewall for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ClawSafe" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "websockets>=12.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27.0",
]

[project.scripts]
clawsafe = "clawsafe.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["clawsafe"]
